# NotusLabs

./: .gitignore  DAILY-BOARD.md  DAILY-BOARD_0.md  DAILY-BOARD_1.md  FINAL-REPORT.md  README.md  pyproject.toml  secrets.txt
kyc/kyc_js/: index.js  package.json
kyc/kyc_py/: form.json  kyc.py
my-smart-wallet/: package-lock.json  readme.md
my-smart-wallet-cli/: notus-wallet-cli.mjs
my-smart-wallet/src/: check-wallet.js  config.js  index.js  register-wallet.js  utils.js  wallet.js
my-transfer/: index.js  package.json
notus-cli/: notus-cli.js  package.json
old_vibe/: llms-full.txt
old_vibe/my-smart-wallet/: .env  package.json
old_vibe/my-smart-wallet-cli/: .env  notus-wallet-cli.mjs  package.json
old_vibe/my-smart-wallet/src/: config.js  index.js
